--- a/templates/admin/user_form.html.twig
+++ b/templates/admin/user_form.html.twig
@@ -25,20 +25,24 @@
 
     <form method="POST" onsubmit="javascript:form_disabler(this)">
         <div class="ui form">
-            <div class="ui required field basic segment">
-                <label class="ui top attached large label">Authentication Method</label>
-                <div class="inline fields">
-                    {% for auth in auths %}
-                        <div class="field">
-                            <div class="ui radio checkbox">
-                                <input id="auth-{{auth.name}}" type="radio" name="auth" value="{{auth.name}}" {% if auth.name == user.auth|default(null) %}checked="checked"{% endif %} {% if is_existing %}disabled="disabled"{% endif %}>
-                                <label for="auth-{{auth.name}}">{{auth.title|default(auth.name)}}</label>
-                            </div>
-                        </div>
-                    {% endfor %}
+            {% if not is_existing %}
+                <div class="ui required field basic segment">
+                    <label class="ui top attached large label">Authentication Method</label>
+                    <div class="inline fields">
+                        {% for auth in auths %}
+                            {% if auth.class != 'App\\Security\\Authentication\\Driver\\OAuth2' %}
+                                <div class="field">
+                                    <div class="ui radio checkbox">
+                                        <input id="auth-{{auth.name}}" type="radio" name="auth" value="{{auth.name}}" {% if auth.name == user.auth|default(null) %}checked="checked"{% endif %} {% if is_existing %}disabled="disabled"{% endif %}>
+                                        <label for="auth-{{auth.name}}">{{auth.title|default(auth.name)}}</label>
+                                    </div>
+                                </div>
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+                    {{ _self.fieldError(errors|default([]), 'auth') }}
                 </div>
-                {{ _self.fieldError(errors|default([]), 'auth') }}
-            </div>
+            {% endif %}
             <div class="ui required field basic segment">
                 <label class="ui top attached large label">User Name</label>
                 <input placeholder="User name (max 25 alphanumeric, underscores, dashes and dots only, and must start with an alphanumerical character)" type="text" name="username" value="{{user.username|default(null)}}" {% if is_existing %}disabled="disabled"{% endif %} />
@@ -116,11 +120,38 @@
                                onclick="return confirm('Are you sure you want to block this user from login?')" />
                     {% endif %}
                 {% endif %}
-                {% if is_existing and ds.getAuthDriver(user.auth) and ds.getAuthDriver(user.auth).driverClass().canResetPassword() %}
-                    <input type="submit" class="ui orange right floated button" name="_action" value="Reset Password"
-                           onclick="return confirm('Are you sure you want to reset the user password?')" />
-                {% endif %}
             </div>
         </div>
     </form>
+
+    {% if is_existing %}
+        <h3>Authentications</h3>
+        <table class="ui celled striped sortable table">
+            <thead>
+                <tr>
+                    <th>Authentication</th>
+                    <th>Registered</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for user_auth in user.authentications %}
+                    {% set driver = ds.getAuthDriver(user_auth.driver_id) %}
+                    <tr>
+                        <td>{{ driver.title|default(user_auth.driver_id) }}</td>
+                        <td class="ui collapsing">{{ user_auth.created_date|date('d/m/Y') }}</td>
+                        <td class="ui collapsing">
+                            {% if is_existing and driver and driver.driverClass().canResetPassword() %}
+                                <form method="POST">
+                                    <input type="hidden" name="driver" value="{{ user_auth.driver_id }}" />
+                                    <input type="submit" class="ui orange right floated button" name="_action" value="Reset Password"
+                                           onclick="return confirm('Are you sure you want to reset the user password?')" />
+                                </form>
+                            {% endif %}
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    {% endif %}
 {% endblock %}
